<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_txt_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginBottom="0dp"
                    android:gravity="end"
                    android:text="@string/server_address"
                    android:textColor="@color/colorPrimaryLight"
                    tools:layout_editor_absoluteX="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteY="691dp">

                    <TextView
                        android:id="@+id/login_txt_protocol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/protocol"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/login_edit_host"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/host"
                        android:textColor="@color/colorPrimary"
                        android:inputType="textUri" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text=":"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/login_edit_port"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="4"
                        android:hint="@string/port"
                        android:textColor="@color/colorPrimary"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="0.5" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/login_txt_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:textColor="@color/colorPrimaryLight"
                        android:text="@string/username" />

                    <EditText
                        android:id="@+id/login_edit_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColor="@color/colorPrimary"
                        android:inputType="textNoSuggestions" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/login_txt_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:textColor="@color/colorPrimaryLight"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/login_edit_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColor="@color/colorPrimary"
                        android:inputType="textPassword" />
                </TableRow>

                <TableRow
                    android:id="@+id/login_row_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/login_txt_confirm_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:textColor="@color/colorPrimaryLight"
                        android:text="@string/confirm_password" />

                    <EditText
                        android:id="@+id/login_edit_confirm_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColor="@color/colorPrimary"
                        android:inputType="textPassword" />
                </TableRow>

                <TableRow
                    android:id="@+id/login_row_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/login_txt_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:textColor="@color/colorPrimaryLight"
                        android:text="@string/first_name" />

                    <EditText
                        android:id="@+id/login_edit_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColor="@color/colorPrimary"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:id="@+id/login_row_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/login_txt_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:textColor="@color/colorPrimaryLight"
                        android:text="@string/last_name" />

                    <EditText
                        android:id="@+id/login_edit_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColor="@color/colorPrimary"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:id="@+id/login_row_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:visibility="gone">

                    <TextView
                        android:id="@+id/login_txt_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:textColor="@color/colorPrimaryLight"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/login_edit_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColor="@color/colorPrimary"
                        android:inputType="textEmailAddress" />
                </TableRow>

                <TableRow
                    android:id="@+id/login_row_gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="gone">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/login_radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimaryLight"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/login_radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimaryLight"
                            android:text="@string/female" />
                    </RadioGroup>
                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/login_txt_toggle_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="25dp"
                android:clickable="true"
                android:textColor="@color/colorPrimaryLight"
                android:text="@string/not_registered" />

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackground"
                android:background="@color/colorAccent"
                android:text="@string/login" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>