<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PersonActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/person_img_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/person_first_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="John"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/person_first_name"
                                android:layout_marginTop="-2dp"
                                android:text="@string/first_name"
                                android:textColor="@color/colorPrimaryLightText"
                                android:textSize="10sp" />
                        </RelativeLayout>

                        <Space
                            android:layout_width="20dp"
                            android:layout_height="match_parent" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/person_last_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Smith"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/person_last_name"
                                android:layout_marginTop="-2dp"
                                android:text="@string/last_name"
                                android:textColor="@color/colorPrimaryLightText"
                                android:textSize="10sp" />
                        </RelativeLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/person_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Male"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/person_gender"
                            android:layout_marginTop="-2dp"
                            android:text="@string/gender"
                            android:textColor="@color/colorPrimaryLightText"
                            android:textSize="10sp" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/person_header_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryLightText"
                android:clickable="true"
                android:padding="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/life_events"
                    android:textColor="@color/colorBackground"
                    app:fontFamily="sans-serif-smallcaps" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/person_header_indicator_events"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collapse"
                    android:textColor="@color/colorBackground"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/person_recycler_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="7dp"
                android:background="@color/colorBackgroundDark" />

            <LinearLayout
                android:id="@+id/person_header_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryLightText"
                android:clickable="true"
                android:padding="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/family"
                    android:textColor="@color/colorBackground"
                    app:fontFamily="sans-serif-smallcaps" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/person_header_indicator_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collapse"
                    android:textColor="@color/colorBackground"
                    android:textStyle="bold"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/person_recycler_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="7dp"
                android:background="@color/colorBackgroundDark" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>