<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.SettingsActivity"
        android:measureWithLargestChild="true">

        <com.jasoncarloscox.familymap.ui.LineSettingsView
            android:id="@+id/settings_life_lines"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_weight="1"/>

        <com.jasoncarloscox.familymap.ui.LineSettingsView
            android:id="@+id/settings_tree_lines"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_weight="1"
            android:background="@color/colorBackgroundDark"/>

        <com.jasoncarloscox.familymap.ui.LineSettingsView
            android:id="@+id/settings_spouse_lines"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_weight="1"
            android:background="@color/colorBackgroundDark">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryText"
                android:textAllCaps="true"
                android:text="@string/map_type"/>

            <Spinner
                android:id="@+id/settings_map_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/settings_sync"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryText"
                android:textAllCaps="true"
                android:text="@string/resync"
                android:clickable="true"/>

            <ProgressBar
                android:id="@+id/settings_progress_spinner"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"/>

        </LinearLayout>


        <TextView
            android:id="@+id/settings_logout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryText"
            android:textAllCaps="true"
            android:text="@string/logout"
            android:background="@color/colorBackgroundDark"
            android:clickable="true"/>

    </LinearLayout>
</ScrollView>